Fix Task8 implementation